added hybrid algorithm

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
 head
     meta(charset="utf-8")
     link(rel="icon" type="image/png" href="favicon.png")
-    title kotlinjs-hexagen
+    title kotlinjs-hexagen-hybrid
 
 body
     div.container
