--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -13,4 +13,8 @@ body
     div.container
         div.row.content
             canvas#main
+        div.row.content.
+            #[a(href="http://red-green-rewrite.github.io/kotlinjs-hexagen/index.html") Original implementation]
+            of Kruskal's algorithm connects rooms randomly.#[br]
+            This hybrid algorithm tries to create a longer paths, to make dead-ends less obvious.
     script(src="bundle.js")
